# finances-app

./: .env.example  .gitignore  BETA_LAUNCH.md  CLAUDE.md  SECURITY_PLAN.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_family_contributions.py  0003_member_is_active.py  0004_rename_owner_role.py  0005_nullable_statement_family.py  0006_rename_is_confirmed_to_is_shared.py
apps/api/application/services/: categorization_service.py  parser_service.py
apps/api/application/use_cases/: categorize_charges.py  manage_family.py  parse_statement.py  review_charges.py  sync_to_sheets.py  upload_statement.py
apps/api/domain/entities/: category.py  charge.py  family.py  statement.py  user.py
apps/api/domain/repositories/: category_repository.py  charge_repository.py  family_repository.py  statement_repository.py  user_repository.py
apps/api/domain/value_objects/: money.py
apps/api/infrastructure/ai/: claude_categorizer.py  claude_parser.py  gemini_parser.py  groq_parser.py
apps/api/infrastructure/auth/: supabase_middleware.py
apps/api/infrastructure/database/: connection.py  models.py
apps/api/infrastructure/google/: oauth_client.py  sheets_client.py
apps/api/infrastructure/parsers/: base_parser.py  csv_parser.py  excel_parser.py  pdf_parser.py
apps/api/infrastructure/repositories/: sql_category_repository.py  sql_charge_repository.py  sql_family_repository.py  sql_statement_repository.py  sql_user_repository.py
apps/api/infrastructure/storage/: supabase_storage.py
apps/api/presentation/: dependencies.py  main.py
apps/api/presentation/api/: auth.py  charges.py  debug.py  families.py  google.py  health.py  statements.py
apps/api/presentation/middleware/: rate_limit.py  security_headers.py
apps/api/presentation/schemas/: charge.py  family.py  google.py  statement.py
apps/api/tests/: conftest.py  test_health.py
apps/api/tests/api/: test_charges.py
apps/api/tests/domain/: test_entities.py
apps/api/tests/use_cases/: test_review_charges.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vercel.json  vite.config.ts
apps/web/e2e/: .auth.json  auth.spec.ts  charges.spec.ts  fixtures.ts  global-setup.ts  quick-expense.spec.ts
apps/web/src/: index.css  main.tsx
apps/web/src/app/: App.tsx  router.tsx
apps/web/src/features/accounts/: AccountsPage.tsx
apps/web/src/features/auth/: AuthCallbackPage.tsx  LoginPage.tsx  RegisterPage.tsx  useAuth.ts
apps/web/src/features/charges/: ChargeRow.tsx  ChargesPage.tsx  FamilyChargesPage.tsx  useCharges.ts
apps/web/src/features/contributions/: ContributionsPage.tsx
apps/web/src/features/dashboard/: DashboardPage.tsx  useDashboard.ts
apps/web/src/features/expenses/: QuickExpensePage.tsx
apps/web/src/features/family/: FamilyPage.tsx  useMyRole.ts
apps/web/src/features/sheets/: SheetsPage.tsx
apps/web/src/features/upload/: UploadPage.tsx  useUpload.ts
apps/web/src/shared/api/: client.ts
apps/web/src/shared/components/: CategorySheet.tsx  ConfirmDialog.tsx  Layout.tsx  ProtectedRoute.tsx  Skeleton.tsx  Spinner.tsx  Toast.tsx
apps/web/src/shared/types/: index.ts
apps/web/src/shared/utils/: memberNames.ts
(+1 files in other folders)
